--- a/sub3suite/src/widgets/InputWidget.ui
+++ b/sub3suite/src/widgets/InputWidget.ui
@@ -65,7 +65,7 @@
      <item>
       <widget class="QLabel" name="labelCount">
        <property name="frameShape">
-        <enum>QFrame::Box</enum>
+        <enum>QFrame::StyledPanel</enum>
        </property>
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
