working on scan configurations

--- a/sub3suite/res/themes/default.css
+++ b/sub3suite/res/themes/default.css
@@ -415,13 +415,16 @@ QProgressBar {
     text-align: center;
     color: black;
     border-width: 1px;
-    border-color: rgb(25,25,25);
+    border-color: rgb(20,20,20);
     border-style: inset;
-    background-color: rgb(50,50,50);
+    background-color: rgb(40,40,40);
+    height: 23px;
+    max-width: 200px;
+    min-width: 200px;
 }
 
 QProgressBar::chunk {
-    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(67, 67, 67, 255), stop:0.6 rgba(143, 143, 107, 160));
+    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(50, 50, 50, 255), stop:1 rgba(150, 150, 112, 200));
 }
 
 QMenuBar {
